# rustybmp

./: .gitignore  Cargo.toml  Dockerfile  README.md  RUSTYBMP_BACKLOG_RV1.md  RUSTYBMP_BACKLOG_RV2.md  RUSTYBMP_BACKLOG_RV3.md  RUSTYBMP_BACKLOG_RV4.md  RUSTYBMP_BACKLOG_RV5.md  RUSTYBMP_BACKLOG_RV6.md  RUSTYBMP_BACKLOG_RV7.md  RUSTYBMP_BACKLOG_RV8.md  RUSTYBMP_BACKLOG_RV9.md  RUSTYBMP_PROJECT_CONTEXT.md  RUSTYBMP_RV8_ANALYSIS.md  RUSTYBMP_TESTING_STRATEGY.md  docker-compose.yml  make_diff.sh  pytest.ini  results_and_decisions.md  rv3_all_changes.patch
.github/workflows/: ci.yml
benches/: bmp_parse.rs
bmppy/: __init__.py  policy_fetcher.py  pyproject.toml
bmppy/ml/: __init__.py  community_learner.py  hijack_classifier.py  parquet_store.py  topology_snapshot.py  train_bgp_stgnn.py  train_route_anomaly.py
bmppy/rbmppy/: __init__.py  acl_generator.py  analytics.py  client.py  convergence_anomaly_detector.py  convergence_detector.py  detectors.py  internet.py  irr_client.py  looking_glass.py  models.py  parquet.py  peering.py  policy_advisor.py  ripe_atlas.py  rpki.py  stream.py  topology.py
bmppy/rbmppy/policy/: __init__.py  ast.py  correlator.py  parsers.py
config/: filters.roto  filters.yaml  rustybmp.toml.example
crates/rbmp-core/: Cargo.toml
crates/rbmp-core/src/: collector_protocol.rs  error.rs  lib.rs
crates/rbmp-core/src/bgp/: attributes.rs  bgpls.rs  capabilities.rs  evpn.rs  flowspec.rs  mod.rs  mvpn.rs  nlri.rs  open.rs  srpolicy.rs  srv6.rs  types.rs  update.rs
crates/rbmp-core/src/bmp/: mod.rs  parser.rs  path_status_tlv.rs  types.rs
crates/rbmp-enrichment/: Cargo.toml
crates/rbmp-enrichment/src/: annotate.rs  aspa.rs  bgpsec.rs  lib.rs  netbox.rs  rtr.rs  servicenow_cmdb.rs  vault.rs  vrp_cache.rs
crates/rbmp-kafka/: Cargo.toml
crates/rbmp-kafka/src/: error.rs  lib.rs  producer.rs  sink.rs  topics.rs
crates/rbmp-mrt/: Cargo.toml
crates/rbmp-mrt/src/: error.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/rbmp-nats/: Cargo.toml
crates/rbmp-nats/src/: lib.rs  publisher.rs  sink.rs
crates/rbmp-rib/: Cargo.toml
crates/rbmp-rib/src/: event.rs  filter.pest  filter.rs  filter_expr.rs  lib.rs  manager.rs  roto_ctx.rs  roto_filter.rs  session.rs  table.rs
crates/rbmp-server/: Cargo.toml
crates/rbmp-server/src/: archive.rs  auth.rs  config.rs  dns.rs  filter_watcher.rs  governor.rs  ha.rs  main.rs  mcp_server.rs  proxy.rs  receiver.rs  retention.rs  state.rs  tls.rs
crates/rbmp-server/src/api/: analytics.rs  capacity.rs  credentials.rs  events.rs  export.rs  external.rs  filters.rs  governance.rs  health.rs  ml.rs  mod.rs  onboard.rs  path_status.rs  peers.rs  policy_fetch.rs  routes.rs  schema.rs  seed.rs  stats.rs  topology.rs
crates/rbmp-server/src/output/: elasticsearch.rs  mod.rs  servicenow_em.rs  splunk.rs  webhook.rs
crates/rbmp-store/: Cargo.toml
crates/rbmp-store/src/: duck.rs  lib.rs  query.rs  schema.rs  writer.rs
diffs/3d5423c_to_6fd5c60/: rv1_all_changes.patch
diffs/rv2/: rv2_all_changes.patch
diffs/rv4/: rv4_all_changes.patch
diffs/rv5/: rv5_all_changes.patch
diffs/rv6/: rv6_all_changes.patch
diffs/rv7/: rv7_all_changes.txt
diffs/rv8/: rv8_all_changes.patch
diffs/rv9/: rv9_all_changes.patch
docs/: CODEX_TESTING.md  NEXT_SESSION_PROMPT.md  TESTING_PROGRESS.md  UBUNTU_TESTING.md
grafana/: rustybmp-dashboard.json
lab/: xrd-bmp.clab.yml
lab/configs/frr/: frr.conf
lab/configs/xrd/: pe1.cfg  pe2.cfg
lab/scenarios/: flap_peer.sh  mass_withdrawal.sh  rv8_governance_smoke.sh
scripts/: check_wiring.sh  gen_bmp_fixtures.py
scripts/dev/: make_diff.sh
tests/: conftest.py  seed.sql  seed_anomaly.sql  seed_convergence.sql  seed_maxprefix.sql
tests/api/: __init__.py  test_all_endpoints.py
tests/integration/: api_smoke.rs  bmp_pdu.rs  frr_bmp.rs  mcp_tools.rs  mod.rs  retention_sweep.rs
tests/ml/: test_acl_generator.py  test_community_learner.py  test_convergence_anomaly.py  test_hijack_classifier.py  test_policy_advisor.py
tests/protocol/: __init__.py  test_bmp_pdu.py  test_convergence_detector.py
tests/scenarios/01_frr_minimal/: test_frr_smoke.py  topology.clab.yml
tests/scenarios/01_frr_minimal/configs/: daemons  frr1.conf  frr2.conf
tests/scenarios/02_xrd_rfc9972/: test_xrd_rfc9972.py  topology.clab.yml
tests/scenarios/02_xrd_rfc9972/configs/: pe1.cfg  pe2.cfg
tests/scenarios/03_mixed_frr_xrd/: test_mixed_frr_xrd.py  topology.clab.yml
tests/scenarios/03_mixed_frr_xrd/configs/: daemons  frr1.conf  frr2.conf  pe1.cfg  pe2.cfg
tests/scenarios/04_cross_vendor_frr_xrd/: test_cross_vendor_frr_xrd.py  topology.clab.yml
tests/scenarios/04_cross_vendor_frr_xrd/configs/: frr1.conf  pe1.cfg
ui/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
ui/src/: app.html
ui/src/lib/: AsnSankey.svelte  MetricCard.svelte  RpkiBadge.svelte  TimelineChart.svelte  VirtualTable.svelte  api.ts  sse.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/adapters/: +page.svelte
ui/src/routes/alerts/: +page.svelte
ui/src/routes/aspath/: +page.svelte
ui/src/routes/bgpls-path/: +page.svelte
ui/src/routes/capacity/: +page.svelte
ui/src/routes/communities/: +page.svelte
ui/src/routes/filters/: +page.svelte
ui/src/routes/flowspec/: +page.svelte
ui/src/routes/ml/: +page.svelte
ui/src/routes/onboard/: +page.svelte
ui/src/routes/path-status/: +page.svelte
ui/src/routes/peers/: +page.svelte
ui/src/routes/peers/[addr]/: +page.svelte
ui/src/routes/policy/: +page.svelte
ui/src/routes/prefix/[prefix]/: +page.svelte
ui/src/routes/prefixes/: +page.svelte
ui/src/routes/query/: +page.svelte
ui/src/routes/rpki/: +page.svelte
ui/src/routes/rpki-coverage/: +page.svelte
ui/src/routes/srpolicy/: +page.svelte
ui/src/routes/stats/: +page.svelte
ui/src/routes/topology/: +page.svelte
ui/src/routes/vrf/: +page.svelte
ui/tests/: rustybmp.spec.ts  tsconfig.json
