[workspace]
members = [
    "crates/rbmp-core",
    "crates/rbmp-rib",
    "crates/rbmp-store",
    "crates/rbmp-server",
    "crates/rbmp-enrichment",
    "crates/rbmp-kafka",
    "crates/rbmp-mrt",
    "crates/rbmp-nats",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
authors      = ["Arjuna Ganesan"]
license      = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# async runtime
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", features = ["codec"] }

# bytes / parsing
bytes        = "1"
byteorder    = "1"

# networking
ipnet        = { version = "2", features = ["serde"] }

# serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
toml         = "0.8"

# error handling
thiserror    = "2"
anyhow       = "1"

# HTTP server
axum         = { version = "0.8", features = ["macros"] }
tower        = { version = "0.5", features = ["full"] }
tower-http   = { version = "0.6", features = ["cors", "fs", "trace"] }
hyper        = { version = "1", features = ["full"] }

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics            = "0.24"
metrics-exporter-prometheus = "0.16"

# time
chrono       = { version = "0.4", features = ["serde"] }

# concurrency
dashmap      = "6"
parking_lot  = "0.12"

# DuckDB
duckdb       = { version = "1", features = ["bundled"] }

# misc
uuid         = { version = "1", features = ["v4", "serde"] }
smallvec     = { version = "1", features = ["serde"] }
indexmap     = { version = "2", features = ["serde"] }

# Kafka
rdkafka          = { version = "0.36", features = ["cmake-build"] }

# MessagePack (collector protocol framing)
rmp-serde        = "1.3"

# Auth / security (RV4-1)
jsonwebtoken     = "9"
tower_governor   = { version = "0.4", features = ["axum"] }

# Benchmarks + integration tests (RV4-9)
criterion        = { version = "0.5", features = ["html_reports"] }
reqwest          = { version = "0.12", features = ["json"] }

# HA leader election (RV4-7 T1)
redis            = { version = "0.25", features = ["tokio-comp"] }

# TLS for BMP listener (RV4-1 T2)
tokio-rustls     = "0.26"
rustls           = "0.23"
rustls-pemfile   = "2"

# NATS (RV4-7)
async-nats       = "0.37"

# Async traits (RV8-OUT1)
async-trait      = "0.1"

# Filter expression language (RV5-1)
pest             = "2"
pest_derive      = "2"

# Hot-reload file watcher (RV5-1)
notify           = { version = "6", default-features = false, features = ["macos_kqueue"] }

# workspace crates
rbmp-core        = { path = "crates/rbmp-core" }
rbmp-rib         = { path = "crates/rbmp-rib" }
rbmp-store       = { path = "crates/rbmp-store" }
rbmp-enrichment  = { path = "crates/rbmp-enrichment" }
rbmp-kafka       = { path = "crates/rbmp-kafka" }
rbmp-mrt         = { path = "crates/rbmp-mrt" }
rbmp-nats        = { path = "crates/rbmp-nats" }

[profile.dev]
opt-level       = 1
debug           = 1
codegen-units   = 16
incremental     = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
strip           = "symbols"
incremental     = false

[profile.ci]
inherits        = "release"
lto             = false
codegen-units   = 4
strip           = "none"
