[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbmppy"
version = "0.1.0"
description = "Python analytics companion for rustybmp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "duckdb>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["rbmppy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
