[package]
name        = "rbmp-kafka"
description = "Kafka output adapter for rustybmp RIB events"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rbmp-core   = { workspace = true }
rbmp-rib    = { workspace = true }
rdkafka     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
tracing     = { workspace = true }
metrics     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
