[package]
name        = "rbmp-mrt"
description = "MRT import/export (RFC 6396) for rustybmp — TABLE_DUMP_V2 and BGP4MP"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rbmp-core   = { workspace = true }
rbmp-rib    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
bytes       = { workspace = true }
ipnet       = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
