[package]
name        = "rbmp-nats"
description = "rustybmp: NATS output sink (RV4-7)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rbmp-rib     = { workspace = true }

async-nats   = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
chrono       = { workspace = true }
