[package]
name        = "rbmp-rib"
description = "In-memory RIB engine for BMP/BGP routes"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rbmp-core   = { workspace = true }
dashmap     = { workspace = true }
parking_lot = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
tracing     = { workspace = true }
indexmap    = { workspace = true }
ipnet       = { workspace = true }
tokio       = { workspace = true }
metrics     = { workspace = true }
