[package]
name        = "rbmp-server"
description = "rustybmp: BMP receiver, HTTP API, and UI server"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
rust-version.workspace = true

[[bin]]
name = "rustybmp"
path = "src/main.rs"

[dependencies]
rbmp-core        = { workspace = true }
rbmp-rib         = { workspace = true }
rbmp-store       = { workspace = true }
rbmp-enrichment  = { workspace = true }

# async
tokio       = { workspace = true }
tokio-util  = { workspace = true }

# bytes
bytes       = { workspace = true }

# HTTP
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
hyper       = { workspace = true }

# serialization
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }

# observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
metrics            = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# error
anyhow      = { workspace = true }
thiserror   = { workspace = true }

# misc
chrono      = { workspace = true }
uuid        = { workspace = true }
ipnet       = { workspace = true }
futures     = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
