[package]
name        = "rbmp-store"
description = "DuckDB-backed persistent store for BMP/BGP route history"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rbmp-core   = { workspace = true }
rbmp-rib    = { workspace = true }
duckdb      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
